Fixed UI bugs - Preferences signature inputs are now dark themed - Preferences accounts tab is now dark themed - Preferences templates inputs are now dark themed - The undo button is now colored and readable

--- a/styles/components.less
+++ b/styles/components.less
@@ -1,34 +1,3 @@
-.undo-redo-manager {
-
-    .undo-redo {
-        background: @soda-cyan;
-
-        .undo-redo-message-wrapper {
-            color: @soda-black;
-        }
-
-        .undo-redo-action-wrapper {
-            .undo-redo-action-text {
-                color: @soda-black;
-            }
-
-            .content-mask {
-                background-color: @soda-black;
-            }
-        }
-    }
-}
-
-.notifications-sticky {
-    .notification-developer {
-        background-color: @soda-purple;
-    }
-}
-
-.fixed-popover {
-    color: @soda-white;
-}
-
 .tutorial-tip {
     background-image: none;
     background-color: @soda-purple;
@@ -36,5 +5,11 @@
 
     &.visible:after {
         border-color: @soda-purple;
+    }
+}
+
+.nylas-toast {
+    .nylas-toast-wrap {
+        background-color: @soda-purple;
     }
 }
